--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         nav {
             width: 200px;
-            background-color: #f8f8f8;
+            background-color: ##121212;
             border-right: 1px solid #ddd;
             position: fixed;
             top: 0;
@@ -65,10 +65,12 @@
         <ul>
             <li>
                 <select>
+                    <option value="inspections">Inspections</option>
                     <option value="rodents">Rodents</option>
-                    <option value="insects">Insect Extermination</option>
-                    <option value="wasps">Wasp Removal</option>
-                    <option value="termites">Termite Treatment</option>
+                    <option value="sheds">Sheds</option>
+                    <option value="stations">New Stations</option>
+                    <option value="combo">Combo Services</option>
+                    <option value="hive">Hive Removal</option>
                 </select>
             </li>
         </ul>
