--- a/index.html
+++ b/index.html
@@ -15,81 +15,96 @@
         body {
             background-color: #121212; /* Silky Black */
             color: #C0C0C0; /* Silver Text */
-            line-height: 1.6;
+            line-height: 1.8; /* Increased line height for readability */
         }
 
         header {
             background-color: #333333; /* Darker gray for contrast */
             color: #C0C0C0;
             text-align: center;
-            padding: 20px;
+            padding: 30px;
             border-bottom: 2px solid #C0C0C0;
+            margin-bottom: 40px; /* Space below header */
         }
 
         header img {
             max-width: 150px;
+            margin-bottom: 20px; /* Space below the logo */
         }
 
         h1 {
-            font-size: 2rem;
+            font-size: 2.5rem;
+            margin-top: 20px; /* Space between logo and title */
         }
 
         nav {
-            width: 200px;
+            width: 220px;
             background-color: #1A1A1A; /* Dark Black */
             border-right: 1px solid #C0C0C0;
             position: fixed;
             top: 0;
             bottom: 0;
-            padding: 20px;
+            padding: 40px 20px; /* More padding in the navigation */
         }
 
         nav h2 {
             color: #C0C0C0;
-            font-size: 1.2rem;
-            margin-bottom: 20px;
+            font-size: 1.4rem;
+            margin-bottom: 30px; /* Increased space between header and list */
         }
 
         nav ul {
             list-style-type: none;
+            padding: 0;
         }
 
         nav ul li {
-            margin: 15px 0;
+            margin-bottom: 25px; /* Increased space between each list item */
         }
 
         nav ul li select {
             width: 100%;
-            padding: 10px;
+            padding: 15px; /* More padding inside the select */
             background-color: #333333;
             color: #C0C0C0;
             border: 1px solid #C0C0C0;
             border-radius: 5px;
+            font-size: 1rem; /* Increased font size for better readability */
         }
 
         main {
-            margin-left: 220px;
-            padding: 20px;
+            margin-left: 250px;
+            padding: 40px 30px; /* More padding around the main content */
         }
 
         .description, .flyer {
-            margin-bottom: 20px;
+            margin-bottom: 40px; /* Increased space between sections */
+        }
+
+        .description h2, .flyer h2 {
+            font-size: 2rem;
+            margin-bottom: 20px; /* Space between section title and content */
+        }
+
+        .description p {
+            font-size: 1.2rem;
+            margin-bottom: 20px; /* Space below paragraph */
         }
 
         .flyer img {
             max-width: 100%;
             border: 2px solid #C0C0C0; /* Silver border around flyer image */
             border-radius: 5px;
+            padding: 10px; /* Padding inside the image border */
+            margin-top: 20px; /* Space above the image */
         }
 
         footer {
             background-color: #333333;
             color: #C0C0C0;
             text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            padding: 20px;
+            margin-top: 60px; /* Space above the footer */
         }
 
     </style>
@@ -134,3 +149,4 @@
     </footer>
 </body>
 </html>
+
