--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             top: 0;
             bottom: 0;
             padding: 40px 20px; /* More padding in the navigation */
+            display: none; /* Hidden by default */
+            transition: all 0.3s ease;
         }
 
         nav h2 {
@@ -70,6 +72,43 @@
             border: 1px solid #C0C0C0;
             border-radius: 5px;
             font-size: 1rem; /* Increased font size for better readability */
+        }
+
+        /* Hamburger menu styling */
+        .hamburger {
+            display: block;
+            width: 30px;
+            height: 25px;
+            position: absolute;
+            top: 25px;
+            right: 25px;
+            cursor: pointer;
+            z-index: 2;
+        }
+
+        .hamburger div {
+            width: 100%;
+            height: 5px;
+            background-color: #C0C0C0;
+            margin: 5px 0;
+            transition: all 0.3s ease;
+        }
+
+        /* Toggle the hamburger lines to X */
+        .hamburger.open div:nth-child(1) {
+            transform: rotate(45deg);
+            position: relative;
+            top: 8px;
+        }
+
+        .hamburger.open div:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.open div:nth-child(3) {
+            transform: rotate(-45deg);
+            position: relative;
+            top: -8px;
         }
 
         main {
@@ -115,7 +154,14 @@
         <h1>Big Don's Pest Control Service</h1>
     </header>
 
-    <nav>
+    <!-- Hamburger Menu Icon -->
+    <div class="hamburger" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <nav id="navMenu">
         <h2>Our Services</h2>
         <ul>
             <li>
@@ -147,6 +193,19 @@
     <footer>
         <p>&copy; 2024 Big Don's Pest Control Service. All Rights Reserved.</p>
     </footer>
+
+    <script>
+        function toggleMenu() {
+            var nav = document.getElementById('navMenu');
+            var hamburger = document.querySelector('.hamburger');
+
+            // Toggle the menu visibility
+            nav.style.display = (nav.style.display === 'block') ? 'none' : 'block';
+            
+            // Toggle the hamburger icon animation
+            hamburger.classList.toggle('open');
+        }
+    </script>
 </body>
 </html>
 
