--- a/index.html
+++ b/index.html
@@ -5,145 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Big Don's Pest Control Service</title>
     <style>
-        /* General Reset */
-        body, h1, h2, p, ul {
+        body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
         }
-
-        body {
-            background-image: url('IMG_1981.jpg'); /* Set flyer image as background */
-            background-size: cover; /* Ensure background covers entire body */
-            background-position: center; /* Center the background */
-            background-attachment: fixed; /* Keep the background fixed when scrolling */
-            color: #C0C0C0; /* Silver Text */
-            line-height: 1.8; /* Increased line height for readability */
-            background-blur: 5px; /* Add a slight blur effect to the background */
-        }
-
         header {
-            background-color: rgba(51, 51, 51, 0.7); /* Dark semi-transparent background */
-            color: #C0C0C0;
+            background-color: #4CAF50;
+            color: white;
             text-align: center;
-            padding: 30px;
-            border-bottom: 2px solid #C0C0C0;
-            margin-bottom: 40px; /* Space below header */
+            padding: 20px;
         }
-
         header img {
             max-width: 150px;
-            margin-bottom: 20px; /* Space below the logo */
         }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-top: 20px; /* Space between logo and title */
-        }
-
         nav {
-            width: 220px;
-            background-color: rgba(26, 26, 26, 0.85); /* Dark semi-transparent background for navigation */
-            border-right: 1px solid #C0C0C0;
+            width: 200px;
+            background-color: #121212;
+            border-right: 1px solid #ddd;
             position: fixed;
             top: 0;
             bottom: 0;
-            padding: 40px 20px; /* More padding in the navigation */
-            display: none; /* Hidden by default */
-            transition: all 0.3s ease;
+            padding: 20px;
         }
-
-        nav h2 {
-            color: #C0C0C0;
-            font-size: 1.4rem;
-            margin-bottom: 30px; /* Increased space between header and list */
-        }
-
         nav ul {
             list-style-type: none;
             padding: 0;
         }
-
         nav ul li {
-            margin-bottom: 25px; /* Increased space between each list item */
+            margin: 15px 0;
         }
-
         nav ul li select {
             width: 100%;
-            padding: 15px; /* More padding inside the select */
-            background-color: #333333;
-            color: #C0C0C0;
-            border: 1px solid #C0C0C0;
-            border-radius: 5px;
-            font-size: 1rem; /* Increased font size for better readability */
+            padding: 10px;
         }
-
-        /* Hamburger menu styling */
-        .hamburger {
-            display: block;
-            width: 30px;
-            height: 25px;
-            position: absolute;
-            top: 25px;
-            right: 25px;
-            cursor: pointer;
-            z-index: 2;
-        }
-
-        .hamburger div {
-            width: 100%;
-            height: 5px;
-            background-color: #C0C0C0;
-            margin: 5px 0;
-            transition: all 0.3s ease;
-        }
-
-        /* Toggle the hamburger lines to X */
-        .hamburger.open div:nth-child(1) {
-            transform: rotate(45deg);
-            position: relative;
-            top: 8px;
-        }
-
-        .hamburger.open div:nth-child(2) {
-            opacity: 0;
-        }
-
-        .hamburger.open div:nth-child(3) {
-            transform: rotate(-45deg);
-            position: relative;
-            top: -8px;
-        }
-
         main {
-            margin-left: 250px;
-            padding: 40px 30px; /* More padding around the main content */
-            background-color: rgba(18, 18, 18, 0.85); /* Semi-transparent background */
-            border-radius: 10px;
-        }
-
-        .description, .flyer {
-            margin-bottom: 40px; /* Increased space between sections */
-        }
-
-        .description h2, .flyer h2 {
-            font-size: 2rem;
-            margin-bottom: 20px; /* Space between section title and content */
-        }
-
-        .description p {
-            font-size: 1.2rem;
-            margin-bottom: 20px; /* Space below paragraph */
-        }
-
-        footer {
-            background-color: rgba(51, 51, 51, 0.7); /* Semi-transparent footer */
-            color: #C0C0C0;
-            text-align: center;
+            margin-left: 220px;
             padding: 20px;
-            margin-top: 60px; /* Space above the footer */
         }
-
+        .description, .flyer {
+            margin-bottom: 20px;
+        }
+        .flyer img {
+            max-width: 100%;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -152,14 +59,7 @@
         <h1>Big Don's Pest Control Service</h1>
     </header>
 
-    <!-- Hamburger Menu Icon -->
-    <div class="hamburger" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-
-    <nav id="navMenu">
+    <nav>
         <h2>Our Services</h2>
         <ul>
             <li>
@@ -187,24 +87,8 @@
             <img src="IMG_1981.jpg" alt="Big Don's Pest Control Flyer">
         </section>
     </main>
-
-    <footer>
-        <p>&copy; 2024 Big Don's Pest Control Service. All Rights Reserved.</p>
-    </footer>
-
-    <script>
-        function toggleMenu() {
-            var nav = document.getElementById('navMenu');
-            var hamburger = document.querySelector('.hamburger');
-
-            // Toggle the menu visibility
-            nav.style.display = (nav.style.display === 'block') ? 'none' : 'block';
-            
-            // Toggle the hamburger icon animation
-            hamburger.classList.toggle('open');
-        }
-    </script>
 </body>
 </html>
+
 
 
