--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
     <!-- Header Section -->
     <header>
-        <img src="logo.png" alt="Big Don's Pest Control Logo">
+        <img src="IMG_1993.JPG" alt="Big Don's Pest Control Logo">
         <h1>Big Don's Pest Control Service</h1>
     </header>
 
